--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start:react-native": "node node_modules/react-native/local-cli/cli.js start",
+    "start:react-native": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
     "react": "15.3.2",
